GrammarParser.py
# Generated from Grammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "'import'", "'as'", "'folder'", "'recursive'", 
                     "'export'", "'to'", "'with'", "'if'", "':'", "'{'", 
                     "'}'", "'else'", "'elif'", "'foreach'", "'in'", "'('", 
                     "')'", "'['", "']'", "','", "'rgb'", "'rgba'", "'hex'", 
                     "'add'", "'watermark'", "'quantize'", "'colors'", "'text'", 
                     "'size'", "'position'", "'opacity'", "'%'", "'rotation'", 
                     "'shadow'", "'shadow_color'", "'blend_mode'", "'font'", 
                     "'color'", "'padding'", "'top-left'", "'top-center'", 
                     "'top-right'", "'center-left'", "'center'", "'center-right'", 
                     "'bottom-left'", "'bottom-center'", "'bottom-right'", 
                     "'resize'", "'width'", "'height'", "'preserve_aspect_ratio'", 
                     "'scale'", "'fit'", "'cover'", "'aspect_ratio'", "'crop'", 
                     "'from'", "'x'", "'y'", "'apply'", "'grayscale'", "'sepia'", 
                     "'blur'", "'sharpen'", "'invert'", "'custom'", "'convert'", 
                     "'jpg'", "'jpeg'", "'png'", "'webp'", "'gif'", "'bmp'", 
                     "'tiff'", "'adjust'", "'of'", "'by'", "'set'", "'brightness'", 
                     "'contrast'", "'saturation'", "'hue'", "'sharpness'", 
                     "'gamma'", "'get'", "'strip'", "'metadata'", "'rename'", 
                     "'organize'", "'into'", "'exif'", "'date'", "'location'", 
                     "'file_size'", "'format'", "'area'", "'author'", "'copyright'", 
                     "'merge'", "'filter'", "'where'", "'limit'", "'sort'", 
                     "'asc'", "'desc'", "'optimize'", "'for'", "'web'", 
                     "'count'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "COMMENT", "NEWLINE", "BOOL", "IDENTIFIER", 
                      "STRING", "NUMBER", "COMP_OP", "BIN_OP", "WS" ]

    RULE_start = 0
    RULE_statements = 1
    RULE_statement = 2
    RULE_simple_statement = 3
    RULE_compound_statement = 4
    RULE_assignment = 5
    RULE_import_statement = 6
    RULE_export_statement = 7
    RULE_conditional = 8
    RULE_foreach_loop = 9
    RULE_expression = 10
    RULE_term = 11
    RULE_factor = 12
    RULE_literal = 13
    RULE_batch_literal = 14
    RULE_batch_items = 15
    RULE_color_literal = 16
    RULE_comparison = 17
    RULE_binary_operation = 18
    RULE_operation = 19
    RULE_watermark_op = 20
    RULE_image_watermark_op = 21
    RULE_quantize_op = 22
    RULE_text_watermark_op = 23
    RULE_watermark_options = 24
    RULE_watermark_option = 25
    RULE_watermark_text_params = 26
    RULE_watermark_text_param = 27
    RULE_watermark_position = 28
    RULE_resize_op = 29
    RULE_resize_params = 30
    RULE_dimension_params = 31
    RULE_aspect_ratio = 32
    RULE_crop_op = 33
    RULE_crop_params = 34
    RULE_filter_op = 35
    RULE_filter_type = 36
    RULE_format_op = 37
    RULE_format_type = 38
    RULE_enhancement_op = 39
    RULE_enhancement_type = 40
    RULE_metadata_op = 41
    RULE_metadata_field = 42
    RULE_pattern = 43
    RULE_batch_op = 44
    RULE_expression_list = 45
    RULE_options = 46
    RULE_option = 47
    RULE_value = 48

    ruleNames =  [ "start", "statements", "statement", "simple_statement", 
                   "compound_statement", "assignment", "import_statement", 
                   "export_statement", "conditional", "foreach_loop", "expression", 
                   "term", "factor", "literal", "batch_literal", "batch_items", 
                   "color_literal", "comparison", "binary_operation", "operation", 
                   "watermark_op", "image_watermark_op", "quantize_op", 
                   "text_watermark_op", "watermark_options", "watermark_option", 
                   "watermark_text_params", "watermark_text_param", "watermark_position", 
                   "resize_op", "resize_params", "dimension_params", "aspect_ratio", 
                   "crop_op", "crop_params", "filter_op", "filter_type", 
                   "format_op", "format_type", "enhancement_op", "enhancement_type", 
                   "metadata_op", "metadata_field", "pattern", "batch_op", 
                   "expression_list", "options", "option", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    COMMENT=117
    NEWLINE=118
    BOOL=119
    IDENTIFIER=120
    STRING=121
    NUMBER=122
    COMP_OP=123
    BIN_OP=124
    WS=125

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(GrammarParser.StatementsContext,0)


        def EOF(self):
            return self.getToken(GrammarParser.EOF, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = GrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.statements()
            self.state = 99
            self.match(GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(GrammarParser.StatementContext,0)


        def statements(self):
            return self.getTypedRuleContext(GrammarParser.StatementsContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = GrammarParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.statement()
                self.state = 102
                self.statements()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_statement(self):
            return self.getTypedRuleContext(GrammarParser.Simple_statementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(GrammarParser.Compound_statementContext,0)


        def NEWLINE(self):
            return self.getToken(GrammarParser.NEWLINE, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = GrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 11, 30, 32, 55, 63, 67, 74, 82, 85, 92, 93, 95, 96, 106, 107, 109, 110, 113, 116, 117, 120]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.simple_statement()
                pass
            elif token in [14, 20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.compound_statement()
                pass
            elif token in [118]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.match(GrammarParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(GrammarParser.AssignmentContext,0)


        def import_statement(self):
            return self.getTypedRuleContext(GrammarParser.Import_statementContext,0)


        def export_statement(self):
            return self.getTypedRuleContext(GrammarParser.Export_statementContext,0)


        def operation(self):
            return self.getTypedRuleContext(GrammarParser.OperationContext,0)


        def COMMENT(self):
            return self.getToken(GrammarParser.COMMENT, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_simple_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_statement" ):
                listener.enterSimple_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_statement" ):
                listener.exitSimple_statement(self)




    def simple_statement(self):

        localctx = GrammarParser.Simple_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simple_statement)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [120]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.assignment()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.import_statement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.export_statement()
                pass
            elif token in [30, 32, 55, 63, 67, 74, 82, 85, 92, 93, 95, 96, 106, 107, 109, 110, 113, 116]:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.operation()
                pass
            elif token in [117]:
                self.enterOuterAlt(localctx, 5)
                self.state = 116
                self.match(GrammarParser.COMMENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditional(self):
            return self.getTypedRuleContext(GrammarParser.ConditionalContext,0)


        def foreach_loop(self):
            return self.getTypedRuleContext(GrammarParser.Foreach_loopContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)




    def compound_statement(self):

        localctx = GrammarParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_statement)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.conditional()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.foreach_loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(GrammarParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = GrammarParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(GrammarParser.IDENTIFIER)
                self.state = 124
                self.match(GrammarParser.T__0)
                self.state = 125
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(GrammarParser.IDENTIFIER)
                self.state = 127
                self.match(GrammarParser.T__1)
                self.state = 128
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.match(GrammarParser.IDENTIFIER)
                self.state = 130
                self.match(GrammarParser.T__2)
                self.state = 131
                self.expression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.match(GrammarParser.IDENTIFIER)
                self.state = 133
                self.match(GrammarParser.T__3)
                self.state = 134
                self.expression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 135
                self.match(GrammarParser.IDENTIFIER)
                self.state = 136
                self.match(GrammarParser.T__4)
                self.state = 137
                self.expression()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 138
                self.match(GrammarParser.IDENTIFIER)
                self.state = 139
                self.match(GrammarParser.T__5)
                self.state = 140
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(GrammarParser.STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(GrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_import_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_statement" ):
                listener.enterImport_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_statement" ):
                listener.exitImport_statement(self)




    def import_statement(self):

        localctx = GrammarParser.Import_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_import_statement)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(GrammarParser.T__6)
                self.state = 144
                self.match(GrammarParser.STRING)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(GrammarParser.T__6)
                self.state = 146
                self.match(GrammarParser.STRING)
                self.state = 147
                self.match(GrammarParser.T__7)
                self.state = 148
                self.match(GrammarParser.IDENTIFIER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.match(GrammarParser.T__6)
                self.state = 150
                self.match(GrammarParser.T__8)
                self.state = 151
                self.match(GrammarParser.STRING)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.match(GrammarParser.T__6)
                self.state = 153
                self.match(GrammarParser.T__8)
                self.state = 154
                self.match(GrammarParser.STRING)
                self.state = 155
                self.match(GrammarParser.T__7)
                self.state = 156
                self.match(GrammarParser.IDENTIFIER)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 157
                self.match(GrammarParser.T__6)
                self.state = 158
                self.match(GrammarParser.T__9)
                self.state = 159
                self.match(GrammarParser.T__8)
                self.state = 160
                self.match(GrammarParser.STRING)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 161
                self.match(GrammarParser.T__6)
                self.state = 162
                self.match(GrammarParser.T__9)
                self.state = 163
                self.match(GrammarParser.T__8)
                self.state = 164
                self.match(GrammarParser.STRING)
                self.state = 165
                self.match(GrammarParser.T__7)
                self.state = 166
                self.match(GrammarParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Export_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def STRING(self):
            return self.getToken(GrammarParser.STRING, 0)

        def options(self):
            return self.getTypedRuleContext(GrammarParser.OptionsContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_export_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExport_statement" ):
                listener.enterExport_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExport_statement" ):
                listener.exitExport_statement(self)




    def export_statement(self):

        localctx = GrammarParser.Export_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_export_statement)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.match(GrammarParser.T__10)
                self.state = 170
                self.expression()
                self.state = 171
                self.match(GrammarParser.T__11)
                self.state = 172
                self.match(GrammarParser.STRING)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(GrammarParser.T__10)
                self.state = 175
                self.expression()
                self.state = 176
                self.match(GrammarParser.T__11)
                self.state = 177
                self.match(GrammarParser.STRING)
                self.state = 178
                self.match(GrammarParser.T__12)
                self.state = 179
                self.options()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ExpressionContext,i)


        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StatementsContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StatementsContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)




    def conditional(self):

        localctx = GrammarParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conditional)
        try:
            self.state = 215
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 183
                self.match(GrammarParser.T__13)
                self.state = 184
                self.expression()
                self.state = 185
                self.match(GrammarParser.T__14)
                self.state = 186
                self.match(GrammarParser.T__15)
                self.state = 187
                self.statements()
                self.state = 188
                self.match(GrammarParser.T__16)
                pass
